--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "sandbox-submodule"]
 	path = sandbox-submodule
 	url = https://github.com/thombashi/sandbox-submodule
+[submodule "gtest"]
+	path = gtest
+	url = https://github.com/google/googletest.git
