--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ install:
   - "%PYTHON%/Scripts/pip.exe --version"
   - "%PYTHON%/Scripts/pip.exe install -r requirements/requirements.txt"
   - "%PYTHON%/Scripts/pip.exe install -r requirements/test_requirements.txt"
+  - "%PYTHON%/Scripts/pip.exe install -r requirements/build_requirements.txt"
 
 test_script:
   - "echo a"
