--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ language: python
 matrix:
   include:
     - os: osx
+      sudo: required
       python: 3.4
       env: TOXENV=python3.4
     - os: osx
+      sudo: required
       python: 3.3
       env: TOXENV=python3.3
 
