--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,8 @@ language: python
 matrix:
   include:
     - os: osx
-      sudo: required
-      python: 3.4
-      env: TOXENV=python3.4
-    - os: osx
-      sudo: required
-      python: 3.3
-      env: TOXENV=python3.3
+      language: generic
+      env: TOXENV=py36
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt -qq update ; fi
