--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,14 @@ matrix:
     - os: osx
       language: generic
       env:
-        - TOXENV=py36
+        - TOXENV=python3.6
         - DEPLOY_FILE='dist/sqlitebiter_macos_amd64.tar.gz'
 
     - os: linux
       python: 3.6
       sudo: required
       env:
-        - TOXENV=py36
+        - TOXENV=python3.6
         - DEPLOY_FILE='dist/sqlitebiter_*.deb'
 
 #before_install:
