--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,9 +32,11 @@ deploy:
   description: 'Release description'
   auth_token:
     secure: yCkrIbtWpwkayosMqpLMv0ew4Le1PY0kYBMNlOIbD6jwSRnc5dRhV6n9DAGMqQ0f
-  artifact: dist\sqlitebiter_win_x64.zip
   draft: false
   prerelease: true
   on:
     branch: master                 # release from master branch only
     appveyor_repo_tag: false        # deploy on tag push only
+
+after_build:
+  - ps: appveyor PushArtifact dist/sqlitebiter_win_x64.zip
