--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,7 @@ notifications:
     channel: notifications
 
 before_deploy:
+  - "build_win_package.bat"
   - ps: appveyor PushArtifact dist/sqlitebiter_win_x64.zip
 
 deploy:
