--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,10 +1,13 @@
-appconfigpy>=0.0.4
-click>=6.7
+appconfigpy>=0.0.7
+click>=7.0
+colorama>=0.3.9
+enum34;python_version<"3.4"
 logbook
-msgfy>=0.0.2
+msgfy>=0.0.3
 nbformat>=4.4.0
 path.py
-pytablereader>=0.20.2
-SimpleSQLite>=0.26.0
-sqliteschema>=0.11.0
-typepy>=0.1.1
+pathvalidate>=0.21.3
+pytablereader[excel,sqlite]>=0.22.0
+simplejson>=3.16.0
+SimpleSQLite>=0.33.0
+typepy>=0.2.4
