--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,13 @@ matrix:
           sudo: required
           env:
               - TOXENV=python3.6
+
+        - os: linux
+          dist: xenial
+          python: 3.6
+          sudo: required
+          env:
+              - TOXENV=build
               - DEPLOY_FILE='dist/sqlitebiter_*.deb'
 
         - os: osx
@@ -36,6 +43,8 @@ notifications:
 
 before_deploy:
   - bash -x build_package.sh
+    on:
+      condition: "$TOXENV = build"
 
 deploy:
   provider: releases
@@ -47,4 +56,4 @@ deploy:
   on:
     tags: false
     on:
-      condition: "$TOXENV = python3.6"
+      condition: "$TOXENV = build"
