--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ matrix:
               - DEPLOY_FILE='dist/sqlitebiter_macos_*'
 
 install:
-    - bash .travis/install.sh
+    - bash -x .travis/install.sh
 
 script:
     - bash -x .travis/run_test.sh
