--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,13 +1,14 @@
-appconfigpy>=0.0.7
-click>=7.0
-colorama>=0.3.9
+appconfigpy>=0.3.1,<1.0.0
+click>=7.0,<8.0
+colorama>=0.4.1,<1.0.0
 enum34;python_version<"3.4"
-logbook
-msgfy>=0.0.3
-nbformat>=4.4.0
+Logbook>=1.1.0,<2.0.0
+msgfy>=0.0.5,<0.1.0
+nbformat>=4.4.0,<5.0.0
 path.py
-pathvalidate>=0.21.3
-pytablereader[excel,sqlite]>=0.22.0
-simplejson>=3.16.0
-SimpleSQLite>=0.33.0
-typepy>=0.2.4
+pathvalidate>=0.26.0,<1.0.0
+pytablereader[excel,sqlite,url]>=0.25.2,<1.0.0
+requests>=2.21.0,<3.0.0
+simplejson>=3.16.0,<4.0.0
+SimpleSQLite>=0.43.0,<1.0.0
+typepy>=0.4.0,<1.0.0
