--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist = python{2.7,3.6},build
+envlist = python{2.7,3.4,3.5,3.6,3.7},build
 
 [testenv]
 deps =
     pytest
 commands =
-    python setup.py test --addopts "-v -m 'not xfail'"
+    python setup.py test
