--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,7 @@ environment:
         - PYTHON: "C:/Python36-x64"
 
 configuration:
+    - Test
     - Release
 
 init:
@@ -15,10 +16,6 @@ install:
     - ps: (new-object net.webclient).DownloadFile('https://bootstrap.pypa.io/get-pip.py', 'C:/get-pip.py')
     - "%PYTHON%/python.exe C:/get-pip.py"
     - "%PYTHON%/Scripts/pip.exe --version"
-    - "%PYTHON%/Scripts/pip.exe install .[test]"
-
-test_script:
-    - "%PYTHON%/python.exe invoke_pytest.py"
 
 notifications:
   - provider: Slack
@@ -26,18 +23,37 @@ notifications:
       secure: JyTQAtBzpPYiWK3eRTz/U+rvmAKopqIWE19ti4vSL/IRygV3jUVUkwET1VyTlrqOeYfNx3Kfcp7eUmHCHxFCgw==
     channel: notifications
 
-before_deploy:
-    - "%PYTHON%/Scripts/pip.exe install .[gs,mediawiki,build]"
-    - "build_win_package.bat"
-    - ps: appveyor PushArtifact dist/sqlitebiter_win_x64.zip
+for:
+  -
+    matrix:
+      only:
+        - configuration: Test
 
-deploy:
-- provider: GitHub
-  tag: $(APPVEYOR_REPO_TAG_NAME)
-  description: 'Release description'
-  auth_token:
-    secure: yCkrIbtWpwkayosMqpLMv0ew4Le1PY0kYBMNlOIbD6jwSRnc5dRhV6n9DAGMqQ0f
-  draft: false
-  prerelease: true
-  on:
-    appveyor_repo_tag: true        # deploy on tag push only
+    install:
+        - ps: (new-object net.webclient).DownloadFile('https://bootstrap.pypa.io/get-pip.py', 'C:/get-pip.py')
+        - "%PYTHON%/python.exe C:/get-pip.py"
+        - "%PYTHON%/Scripts/pip.exe --version"
+        - "%PYTHON%/Scripts/pip.exe install .[test]"
+
+    test_script:
+        - "%PYTHON%/python.exe invoke_pytest.py"
+
+  -
+    matrix:
+      only:
+        - configuration: Release
+          PYTHON: "C:/Python27-x64"
+    before_deploy:
+        - "%PYTHON%/Scripts/pip.exe install .[gs,mediawiki,build]"
+        - "build_win_package.bat"
+        - ps: appveyor PushArtifact dist/sqlitebiter_win_x64.zip
+    deploy:
+    - provider: GitHub
+      tag: $(APPVEYOR_REPO_TAG_NAME)
+      description: 'Release description'
+      auth_token:
+        secure: yCkrIbtWpwkayosMqpLMv0ew4Le1PY0kYBMNlOIbD6jwSRnc5dRhV6n9DAGMqQ0f
+      draft: false
+      prerelease: true
+      on:
+        appveyor_repo_tag: true        # deploy on tag push only
