--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,18 +47,20 @@ for:
     matrix:
       only:
         - configuration: Release
-          PYTHON: "C:/Python36-x64"
+          PYTHON: "C:/Python37-x64"
+
     before_deploy:
-        - "%PYTHON%/Scripts/pip.exe install .[gs,mediawiki,build] jsonschema==2.6.0"
-        - "build_win_package.bat"
-        - ps: appveyor PushArtifact dist/sqlitebiter_win_x64.zip
+      - "%PYTHON%/Scripts/pip.exe install .[excel,gs,mediawiki,sqlite,buildexe] jsonschema==2.6.0"
+      - "build_win_package.bat"
+      - ps: appveyor PushArtifact dist/sqlitebiter_win_x64.zip
+
     deploy:
-    - provider: GitHub
-      tag: $(APPVEYOR_REPO_TAG_NAME)
-      description: 'Release description'
-      auth_token:
-        secure: yCkrIbtWpwkayosMqpLMv0ew4Le1PY0kYBMNlOIbD6jwSRnc5dRhV6n9DAGMqQ0f
-      draft: false
-      prerelease: true
-      on:
-        appveyor_repo_tag: true        # deploy on tag push only
+      - provider: GitHub
+        tag: $(APPVEYOR_REPO_TAG_NAME)
+        description: "Release description"
+        auth_token:
+          secure: l3Edds+qJSbk42FBi9+s1Fu7wlTkGHGeDI52i1zvDjZXbNk1VTDASioYJiFb9f3M
+        draft: false
+        prerelease: true
+        on:
+          appveyor_repo_tag: true  # deploy on tag push only
