--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,8 @@ language: python
 
 cache: pip
 
-matrix:
+jobs:
     include:
-        - os: linux
-          python: 2.7
-          sudo: required
-          env:
-              - TOXENV=python2.7
-
         - os: linux
           python: 3.6
           sudo: required
